@@ -3,7 +3,6 @@ package stirling.software.proprietary.controller.api;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Stream;
@@ -19,10 +18,11 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
+import io.swagger.v3.oas.annotations.tags.Tag;
+
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
-import stirling.software.common.annotations.api.UserApi;
 import stirling.software.common.configuration.InstallationPathConfig;
 import stirling.software.proprietary.model.api.signature.SavedSignatureRequest;
 import stirling.software.proprietary.model.api.signature.SavedSignatureResponse;
@@ -34,12 +34,13 @@ import stirling.software.proprietary.service.SignatureService;
  * authentication and enforces per-user storage limits. All endpoints require authentication
  * via @PreAuthorize("isAuthenticated()").
  */
-@UserApi
 @Slf4j
 @RestController
 @RequestMapping("/api/v1/proprietary/signatures")
 @RequiredArgsConstructor
-@PreAuthorize("isAuthenticated()")
+@Tag(
+        name = "Saved Signatures",
+        description = "Manage saved signature templates for authenticated users")
 public class SignatureController {
 
     private final SignatureService signatureService;
@@ -51,10 +52,18 @@ public class SignatureController {
      * requirements.
      */
     @PostMapping
+    @PreAuthorize("isAuthenticated() && !hasAuthority('ROLE_DEMO_USER')")
     public ResponseEntity<SavedSignatureResponse> saveSignature(
             @RequestBody SavedSignatureRequest request) {
         try {
             String username = userService.getCurrentUsername();
+
+            if ("shared".equals(request.getScope()) && !userService.isCurrentUserAdmin()) {
+                log.warn(
+                        "User {} attempted to create shared signature without admin role",
+                        username);
+                return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
+            }
 
             // Validate request
             if (request.getDataUrl() == null || request.getDataUrl().isEmpty()) {
@@ -79,6 +88,7 @@ public class SignatureController {
      * signatures.
      */
     @GetMapping
+    @PreAuthorize("isAuthenticated() && !hasAuthority('ROLE_DEMO_USER')")
     public ResponseEntity<List<SavedSignatureResponse>> listSignatures() {
         try {
             String username = userService.getCurrentUsername();
@@ -101,10 +111,19 @@ public class SignatureController {
         try {
             String username = userService.getCurrentUsername();
             String newLabel = body.get("label");
+            boolean isAdmin = userService.isCurrentUserAdmin();
 
             if (newLabel == null || newLabel.trim().isEmpty()) {
                 log.warn("Invalid label update request");
                 return ResponseEntity.badRequest().build();
+            }
+
+            if (signatureService.isSharedSignature(signatureId) && !isAdmin) {
+                log.warn(
+                        "User {} attempted to update shared signature {} without admin role",
+                        username,
+                        signatureId);
+                return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
             }
 
             signatureService.updateSignatureLabel(username, signatureId, newLabel);
@@ -163,7 +182,7 @@ public class SignatureController {
      */
     private boolean deleteFromSharedFolder(String signatureId) throws IOException {
         String signatureBasePath = InstallationPathConfig.getSignaturesPath();
-        Path sharedFolder = Paths.get(signatureBasePath, ALL_USERS_FOLDER);
+        Path sharedFolder = Path.of(signatureBasePath, ALL_USERS_FOLDER);
         boolean deleted = false;
 
         if (Files.exists(sharedFolder)) {
